--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,8 @@ androidx-core = "1.16.0"
 androidx-core-splashscreen = "1.0.1"
 compose-bom = "2025.07.00"
 compose-material3 = "1.4.0-beta01"
+test = "1.7.0"
+test-junit = "1.3.0"
 
 [libraries]
 androidx-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
@@ -24,6 +26,10 @@ compose-material3 = { group = "androidx.compose.material3", name = "material3", 
 compose-material-icons = { group = "androidx.compose.material", name = "material-icons-extended" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+test-core = { group = "androidx.test", name = "core-ktx", version.ref = "test" }
+test-rules = { group = "androidx.test", name = "rules", version.ref = "test" }
+test-runner = { group = "androidx.test", name = "runner", version.ref = "test" }
+test-ext-junit = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "test-junit" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
