--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.GigaPass"
-        tools:targetApi="36"/>
+        tools:targetApi="36">
+
+        <activity android:name=".GigaPassActivity"
+            android:exported="true"
+            android:theme="@style/Theme.GigaPass.Splash"
+            android:windowSoftInputMode="adjustNothing">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
+        </activity>
+
+    </application>
 
 </manifest>
