--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,33 +2,53 @@
 # Plugins
 agp = "8.12.0"
 kotlin = "2.2.0"
+kotlinx-serialization = "1.9.0"
 ksp = "2.2.0-2.0.2"
 hilt = "2.57"
 room = "2.7.2"
 # Libraries
 androidx-core = "1.16.0"
 androidx-core-splashscreen = "1.0.1"
+androidx-activity = "1.10.1"
 compose-bom = "2025.07.00"
 compose-material3 = "1.4.0-beta01"
+lifecycle = "2.9.2"
+navigation3 = "1.0.0-alpha06"
 test = "1.7.0"
 test-junit = "1.3.0"
 
 [libraries]
+# AndroidX
 androidx-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidx-core-splashscreen" }
+androidx-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "androidx-activity" }
+# Jetpack Compose
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 compose-animation = { group = "androidx.compose.animation", name = "animation" }
 compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
 compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 compose-ui = { group = "androidx.compose.ui", name = "ui" }
+# Jetpack Compose - Preview
 compose-ui-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+# Jetpack Compose - Material 3 Expressive
 compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "compose-material3" }
 compose-material-icons = { group = "androidx.compose.material", name = "material-icons-extended" }
+# Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+# KotlinX
+kotlinx-serialization-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
+# Lifecycle
+lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+lifecycle-viewmodel-navigation3 = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-navigation3", version = "1.0.0-alpha04" }
+# Navigation
+navigation3-runtime = { group = "androidx.navigation3", name = "navigation3-runtime", version.ref = "navigation3" }
+navigation3-ui = { group = "androidx.navigation3", name = "navigation3-ui", version.ref = "navigation3" }
+# Room
 room-android = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+# AndroidX Test
 test-core = { group = "androidx.test", name = "core-ktx", version.ref = "test" }
 test-rules = { group = "androidx.test", name = "rules", version.ref = "test" }
 test-runner = { group = "androidx.test", name = "runner", version.ref = "test" }
@@ -39,6 +59,7 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinx-serialization" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 room = { id = "androidx.room", version.ref = "room" }
