--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ androidx-core-splashscreen = "1.0.1"
 androidx-activity = "1.10.1"
 compose-bom = "2025.07.00"
 compose-material3 = "1.4.0-beta01"
+hilt-navigation = "1.2.0"
 lifecycle = "2.9.2"
 navigation3 = "1.0.0-alpha06"
 test = "1.7.0"
@@ -37,6 +38,7 @@ compose-material-icons = { group = "androidx.compose.material", name = "material
 # Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation" }
 # KotlinX
 kotlinx-serialization-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
 # Lifecycle
