--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ androidx-core = "1.16.0"
 androidx-core-splashscreen = "1.0.1"
 androidx-activity = "1.10.1"
 compose-bom = "2025.07.00"
-compose-material3 = "1.5.0-alpha01"
+compose-material3 = "1.4.0-beta01"
 hilt-navigation = "1.2.0"
 lifecycle = "2.9.2"
 navigation3 = "1.0.0-alpha06"
