--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,7 +32,7 @@ compose-ui = { group = "androidx.compose.ui", name = "ui" }
 # Jetpack Compose - Preview
 compose-ui-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-# Jetpack Compose - Material 3 Expressive
+# Jetpack Compose - Material 3
 compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "compose-material3" }
 compose-material-icons = { group = "androidx.compose.material", name = "material-icons-extended" }
 # Hilt
