--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 # Plugins
 agp = "8.12.0"
+androidx-baselineprofile = "1.4.0"
 kotlin = "2.2.0"
 kotlinx-serialization = "1.9.0"
 ksp = "2.2.0-2.0.2"
@@ -10,6 +11,7 @@ room = "2.7.2"
 androidx-core = "1.16.0"
 androidx-core-splashscreen = "1.0.1"
 androidx-activity = "1.10.1"
+androidx-profileinstaller = "1.4.1"
 compose-bom = "2025.07.00"
 compose-material3 = "1.5.0-alpha01"
 hilt-navigation = "1.2.0"
@@ -17,12 +19,15 @@ lifecycle = "2.9.2"
 navigation3 = "1.0.0-alpha06"
 test = "1.7.0"
 test-junit = "1.3.0"
+test-espresso = "3.7.0"
+test-uiautomator = "2.3.0"
 
 [libraries]
 # AndroidX
 androidx-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidx-core-splashscreen" }
 androidx-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "androidx-activity" }
+androidx-profileinstaller = { group = "androidx.profileinstaller", name = "profileinstaller", version.ref = "androidx-profileinstaller" }
 # Jetpack Compose
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 compose-animation = { group = "androidx.compose.animation", name = "animation" }
@@ -55,10 +60,15 @@ test-core = { group = "androidx.test", name = "core-ktx", version.ref = "test" }
 test-rules = { group = "androidx.test", name = "rules", version.ref = "test" }
 test-runner = { group = "androidx.test", name = "runner", version.ref = "test" }
 test-ext-junit = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "test-junit" }
+test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "test-espresso" }
+test-uiautomator = { group = "androidx.test.uiautomator", name = "uiautomator", version.ref = "test-uiautomator" }
+test-macrobenchmark = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "androidx-baselineprofile" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+android-test = { id = "com.android.test", version.ref = "agp" }
+androidx-baselineprofile = { id = "androidx.baselineprofile", version.ref = "androidx-baselineprofile" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
